# huminiod-robotics

./: MCP_CLEANUP_COMPLETE.md  MCP_ERRORS_FIX.md  MCP_SETUP.md  claude_mcp_config.json  fix-mcp-errors.ps1  gemini_mcp_config.json  install-mcp.ps1  package-lock.json  package.json
.claude/: settings.json
.gemini/: settings.json
ai-native-book/: .gitignore  .npmrc  README.md  docusaurus.config.js  package.json  sidebar.js  sidebars.js
ai-native-book/docs/: CONSTITUTION.md  deployment.md  preface.md
ai-native-book/docs/modules/: module1-ros2.md  module2-digital-twin.md
ai-native-book/docs/modules/module1/: README.md  constitution.md
ai-native-book/docs/modules/module10/: constitution.md
ai-native-book/docs/modules/module2/: README.md  constitution.md
ai-native-book/docs/modules/module3/: README.md  constitution.md
ai-native-book/docs/modules/module4/: constitution.md
ai-native-book/docs/modules/module5/: constitution.md
ai-native-book/docs/modules/module6/: constitution.md
ai-native-book/docs/modules/module7/: constitution.md
ai-native-book/docs/modules/module8/: constitution.md
ai-native-book/docs/modules/module9/: constitution.md
ai-native-book/spec-kit/: config.json
ai-native-book/spec-kit/ci/: validate-md.js
ai-native-book/spec-kit/templates/: mini-project-template.md  module-template.md
ai-native-book/src/components/: HomepageFeatures.js
ai-native-book/src/pages/: index.js
ai-native-book/website/: docusaurus.config.ts  package.json  sidebars.ts
ai-native-book/website/docs/: CONSTITUTION.md  intro.md  philosophy.md  setup.md
ai-native-book/website/docs/ai/: agent-overview.md  memory-systems.md  planning-decision-making.md  vision-perception.md
ai-native-book/website/docs/ethics/: intro.md  safety-protocols.md
ai-native-book/website/docs/module1/: ai-ros-integration.md  intro.md  nodes-topics.md  project.md  ros-basics.md  services-actions.md  urdf.md
ai-native-book/website/docs/module2/: digital-twin-project.md  gazebo-basics.md  intro.md  physics-simulation.md  unity-integration.md
backend/: .env.example  requirements.txt
backend/app/: main.py
backend/app/services/: ingestion.py  rag_service.py
history/prompts/general/: 0001-setup-docusaurus-for-physical-ai-book.general.prompt.md
history/prompts/huminiod-robotics/: 001-deploy-book.tasks.prompt.md
huminoid_ws/src/huminoid_ai/: package.xml  pyproject.toml
huminoid_ws/src/huminoid_ai/huminoid_ai/: __init__.py  ai_decision_node.py
huminoid_ws/src/huminoid_bringup/: CMakeLists.txt  package.xml
huminoid_ws/src/huminoid_bringup/launch/: gazebo_simulation.launch.py  system_bringup.launch.py
huminoid_ws/src/huminoid_bringup/worlds/: huminoid_world.sdf
huminoid_ws/src/huminoid_description/: CMakeLists.txt  package.xml
huminoid_ws/src/huminoid_description/launch/: view_robot.launch.py
huminoid_ws/src/huminoid_description/urdf/: huminoid.gazebo  huminoid.urdf  materials.xacro
rag_chatbot_backend/: .env  main.py
unity-digital-twin/: README.md
unity-digital-twin/Assets/Scenes/: DigitalTwinScene.unity
