<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>huminoid_ai</name>
  <version>0.0.1</version>
  <description>AI integration for the Huminoid humanoid robot</description>
  <maintainer email="info@huminiod-robotics.org">Huminoid Robotics</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>openai</depend>
  <depend>qdrant-client</depend>

  <exec_depend>python3-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>