[project]
name = "huminoid_ai"
version = "0.0.0"
description = "AI integration for the Huminoid humanoid robot"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
ai_decision_node = "huminoid_ai.ai_decision_node:main"

[tool.setuptools]
zip-safe = False
[tool.setuptools.packages.find]
where = ["huminoid_ai"]
include = ["huminoid_ai*"]

[project.dependencies]
rclpy = ">=3.0.0"
std_msgs = ">=4.0.0"
sensor_msgs = ">=5.0.0"
geometry_msgs = ">=4.0.0"
openai = ">=1.0.0"
qdrant-client = ">=1.7.0"